k8s/Parking/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parking-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: parking
