k8s/Parking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parking-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/parking
            pathType: "Prefix"
            backend:
              service:
                name: parking-service
                port:
                  number: 80
